--- a/src/index.css
+++ b/src/index.css
@@ -641,7 +641,7 @@ a {
     top: 5px;
     right: 5px;
     cursor: pointer;
-    background-color: #b1b1b1;
+    background-color: #d1d1d1;
     border-radius: 100%;
     padding: 5px;
 }
@@ -655,7 +655,7 @@ a {
 
 .CardProducto {
     width: 200px;
-    height: 280px;
+    height: 300px;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 60% 40%;
@@ -692,6 +692,7 @@ a {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    /* margin-bottom: 10px; */
 }
 
 .CardProductoInfo h5 {
@@ -1107,33 +1108,75 @@ textarea  */
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     margin: 50px;
-}
-
-.imgVolverProductos {
-    position: absolute;
-    top: -100px;
-    right: -40px;
 }
 
 .detailsContainer {
     position: relative;
-    max-width: 800px;
+    max-width: 850px;
     height: auto;
     margin: 20px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    display: grid;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.contenidoDetalleProducto{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 810px;
+    /* display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: repeat(10, 10%)
+    grid-row: 100%; */
+}
+
+.detailCalendarContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 400px;
+    gap: 20px;
+}
+
+/* calendario */
+
+.calendarContainer{
+    width: 380px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.calendarContainerTitulo{
+    font-size: 20px;
+    text-align: center;
+}
+
+/* Detalles producto */
+
+.imgVolverDetalleProductos {
+    position: absolute;
+    top: -25px;
+    right: -35px;
+    height: 50px;
+    padding-right: 10px;
 }
 
 .detallesNombre {
-    height: auto;
+    height: 100%;
     width: auto;
     background-color: #000000;
     color: #DF922F;
@@ -1143,8 +1186,8 @@ textarea  */
     align-items: center;
     justify-content: center;
     border-radius: 8px;
-    grid-column: 1/3;
-    grid-row: 1/3;
+    padding: 10px 0px;
+    margin-bottom: 20px;
 }
 
 .detallesNombre h2 {
@@ -1152,37 +1195,32 @@ textarea  */
     text-align: center;
 }
 
-.detallesNombre img {
-    height: 50px;
-    padding-right: 10px;
-}
-
-.detallesNombre a {
-    position: absolute;
-    right: 0;
-}
+/* Slider de imagenes */
 
 .imgenesDetalleProducto {
-    width: 200px;
-    height: 200px;
+    width: 350px;
+    height: 350px;
     border-radius: 8px;
     border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 .imgContainer {
     overflow: hidden;
-    width: 200px;
-    /* margin: auto; */
+    width: 350px;
     border-radius: 8px;
 }
 
 .sliderContainer {
-    grid-column: 1/2;
-    grid-row: 3/11;
+    position: relative;
+    height: 500px;
+    width: 400px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .slider {
@@ -1193,7 +1231,6 @@ textarea  */
 .thumbnailContainer {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
     overflow-x: hidden;
 }
 
@@ -1214,11 +1251,9 @@ textarea  */
 }
 
 .priceDetailContainer {
-    grid-column: 2/3;
-    grid-row: 3/10;
-    margin-top: 30px;
-    margin-bottom: 50px;
-    height: 400px;
+    width: 100%;
+    height: auto;
+    gap: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -1234,22 +1269,31 @@ textarea  */
     align-self: center;
 }
 
-.botonesSlider {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+.botonesAlquilarComprarContainer{
+    width: 100%;
     margin: 10px;
     margin-top: 30px;
-    width: 170px;
 }
 
 .botonDesplazarImg {
     border: none;
-    border-radius: 8px;
+    border-radius: 100%;
     padding: 8px;
-
+    width: 40px;
+    height: 40px;
 }
 
+.botonDesplazarImgAntes{
+    position: absolute;
+    top: 155px;
+    left: 5px;
+}
+
+.botonDesplazarImgDespues{
+    position: absolute;
+    top: 155px;
+    right: 5px;
+}
 /* ------------------ Footer ----------------------*/
 
 .footer {
