--- a/src/index.css
+++ b/src/index.css
@@ -1842,38 +1842,93 @@ h4 {
 
 .reservaProducto {
     font-family: Arial, sans-serif;
-    max-width: 800px;
+    width: 800px;
     margin: auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+/* Div 1 */
+
+.reservaProductoDiv1{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.reservaProductoImgP{
+    display: flex;
+    flex-direction: row;
+}
+
+.reservaProductoImgP p{
+    width: 300px;
+    text-align: justify;
+    margin: 0px 39px;
 }
 
 .reservaProducto h2 {
-    color: #333;
+    color: #DF922F;
+    text-align: center;
+    font-size: 30px;
+}
+
+.reservaProductoNombre{
+    margin-top: 20px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.reservaProductoDivImg{
+    margin: auto;
 }
 
 .reservaProducto img {
-    max-width: 100%;
-    height: auto;
+    width: 250px;
+    height: 250px;
     border-radius: 8px;
 }
 
 .reservaProducto h3 {
+    color: #DF922F;
     border-bottom: 1px solid #ccc;
     padding-bottom: 10px;
     margin-top: 20px;
+    padding-left: 10px;
 }
 
-.reservaProducto img {
-    max-width: 100%;
-    height: auto;
-    max-height: 200px;
-    border-radius: 8px;
+/* Div 2 */
+
+.reservaProductoDiv2{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 20px;
+    margin-left: 30px;
 }
 
-.reservaProducto p {
-    margin-bottom: 10px;
+.reservaProductoDiv2 p{
+    display: flex;
+    align-items: center;
+}
+
+.reservaProductoSpan{
+    width: 150px;
+    display: inline-block;
+}
+
+/* Div Buton */
+
+.reservaProductoDivButon{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 .reservaProducto .errorMessage {
@@ -1888,20 +1943,15 @@ h4 {
     cursor: pointer;
 }
 
-.reservaProducto .confirmButton {
+.reservaProductoDivButon button {
     background-color: #ffb61a;
     color: #000000;
     border-radius: 10px;
     padding: 10px 15px;
+    width: 145px;
+    margin: 10px;
 }
 
-.reservaProducto .cancelButton {
-    background-color: #ffb61a;
-    color: #000000;
-    border-radius: 10px;
-    padding: 10px 15px;
-    margin-left: 10px;
-}
 
 /* Estilos para login /login */
 
