--- a/src/index.css
+++ b/src/index.css
@@ -169,7 +169,7 @@ a {
     .header {
         height: 90px;
         display: grid;
-        grid-template-columns: 25% 50% 25%;
+        grid-template-columns: 25% 40% 30%;
         grid-template-rows: 100%;
     }
 
@@ -242,7 +242,7 @@ a {
         display: flex;
         flex-direction: column;
     }
-    
+
     .menuDesplegableLi {
         padding: 10px;
         cursor: pointer;
@@ -398,7 +398,7 @@ a {
     gap: 20px;
 }
 
-.buscador{
+.buscador {
     margin-top: 30px;
     display: flex;
     flex-direction: column;
@@ -439,7 +439,7 @@ a {
     align-items: center;
 }
 
-.rangoFechas{
+.rangoFechas {
     margin-bottom: 20px;
     font-size: 20px;
 }
@@ -474,9 +474,12 @@ a {
 .react-datepicker__month-text--keyboard-selected,
 .react-datepicker__quarter-text--keyboard-selected,
 .react-datepicker__year-text--keyboard-selected {
-  background-color: #ffd67f;
+    background-color: #ffd67f;
 }
-.react-datepicker__day--selected, .react-datepicker__day--in-selecting-range, .react-datepicker__day--in-range,
+
+.react-datepicker__day--selected,
+.react-datepicker__day--in-selecting-range,
+.react-datepicker__day--in-range,
 .react-datepicker__month-text--selected,
 .react-datepicker__month-text--in-selecting-range,
 .react-datepicker__month-text--in-range,
@@ -486,10 +489,13 @@ a {
 .react-datepicker__year-text--selected,
 .react-datepicker__year-text--in-selecting-range,
 .react-datepicker__year-text--in-range {
-  background-color: #DF922F;
-  color: #fff;
+    background-color: #DF922F;
+    color: #fff;
 }
-.react-datepicker__day--selected:hover, .react-datepicker__day--in-selecting-range:hover, .react-datepicker__day--in-range:hover,
+
+.react-datepicker__day--selected:hover,
+.react-datepicker__day--in-selecting-range:hover,
+.react-datepicker__day--in-range:hover,
 .react-datepicker__month-text--selected:hover,
 .react-datepicker__month-text--in-selecting-range:hover,
 .react-datepicker__month-text--in-range:hover,
@@ -499,7 +505,7 @@ a {
 .react-datepicker__year-text--selected:hover,
 .react-datepicker__year-text--in-selecting-range:hover,
 .react-datepicker__year-text--in-range:hover {
-  background-color: #dd9e17;
+    background-color: #dd9e17;
 }
 
 .react-datepicker__day--keyboard-selected:hover,
@@ -510,21 +516,21 @@ a {
 }
 
 .react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range,
-.react-datepicker__month-text--in-range,
-.react-datepicker__quarter-text--in-range,
-.react-datepicker__year-text--in-range),
+    .react-datepicker__month-text--in-range,
+    .react-datepicker__quarter-text--in-range,
+    .react-datepicker__year-text--in-range),
 .react-datepicker__month-text--in-selecting-range:not(.react-datepicker__day--in-range,
-.react-datepicker__month-text--in-range,
-.react-datepicker__quarter-text--in-range,
-.react-datepicker__year-text--in-range),
+    .react-datepicker__month-text--in-range,
+    .react-datepicker__quarter-text--in-range,
+    .react-datepicker__year-text--in-range),
 .react-datepicker__quarter-text--in-selecting-range:not(.react-datepicker__day--in-range,
-.react-datepicker__month-text--in-range,
-.react-datepicker__quarter-text--in-range,
-.react-datepicker__year-text--in-range),
+    .react-datepicker__month-text--in-range,
+    .react-datepicker__quarter-text--in-range,
+    .react-datepicker__year-text--in-range),
 .react-datepicker__year-text--in-selecting-range:not(.react-datepicker__day--in-range,
-.react-datepicker__month-text--in-range,
-.react-datepicker__quarter-text--in-range,
-.react-datepicker__year-text--in-range) {
+    .react-datepicker__month-text--in-range,
+    .react-datepicker__quarter-text--in-range,
+    .react-datepicker__year-text--in-range) {
     background-color: #f8d382;
 }
 
@@ -539,12 +545,12 @@ a {
     /* fill: #DF922F; */
 }
 
-.react-datepicker__header{
+.react-datepicker__header {
     background-color: #f8e0c2;
 
 }
 
-.react-datepicker__close-icon::after  {
+.react-datepicker__close-icon::after {
     background-color: #DF922F;
 }
 
@@ -622,25 +628,27 @@ a {
     background: transparent;
 }
 
-@media (max-width:520) {
+@media (max-width:520px) {
 
-    .search-block{
-        width: 380px;
+
+    .search-block {
+        max-width: 350px;
     }
 
-    .inputFechaBuscador{
-        width: 100px;
+    .date-picker-container-date {
+        width: 300px;
     }
+
+    .inputFechaBuscador {
+        width: 130px;
+    }
+
 
 }
 
 
 
 /* ----- Card Producto -----*/
-
-.CardProducto {
-    position: relative;
-}
 
 .CardFavoritoIcon {
     position: absolute;
@@ -660,6 +668,7 @@ a {
 }
 
 .CardProducto {
+    position: relative;
     width: 200px;
     height: 300px;
     display: grid;
@@ -809,7 +818,8 @@ a {
 
     .CardProducto {
         width: 150px;
-        height: auto;
+        height: 270px;
+        margin: 10px;
     }
 
     .CardProductoInfo h5 {
@@ -948,15 +958,14 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .gifCargandoProducto {
-    width: 50px;
     border-radius: 100%;
     box-shadow: 4px 4px 8px rgb(236, 172, 88, 0.5)
 }
 
-/* Editar Producto */
 
 .botonSalirEditarProductos {
     border-radius: 100%;
@@ -1020,7 +1029,14 @@ a {
     height: 60px;
 }
 
-@media (max-width:860px) {}
+@media (max-width:860px) {
+
+    .imgNoDisponibleAdmin {
+        width: 370px;
+    }
+
+
+}
 
 /* Agregar Producto */
 
@@ -1114,7 +1130,8 @@ textarea  */
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .detailsContainer {
@@ -1132,7 +1149,7 @@ textarea  */
     justify-content: space-around;
 }
 
-.contenidoDetalleProducto{
+.contenidoDetalleProducto {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -1140,7 +1157,7 @@ textarea  */
     width: 850px;
 }
 
-.detailCalendarContainer{
+.detailCalendarContainer {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -1151,7 +1168,7 @@ textarea  */
 
 /* calendario */
 
-.calendarContainer{
+.calendarContainer {
     width: 400px;
     height: 390px;
     display: flex;
@@ -1163,7 +1180,7 @@ textarea  */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.calendarContainerTitulo{
+.calendarContainerTitulo {
     font-size: 20px;
     text-align: center;
 }
@@ -1175,7 +1192,6 @@ textarea  */
     top: -25px;
     right: -35px;
     height: 50px;
-    padding-right: 10px;
 }
 
 .detallesNombre {
@@ -1198,7 +1214,7 @@ textarea  */
     text-align: center;
 }
 
-.react-calendar{
+.react-calendar {
     border-radius: 10px;
 }
 
@@ -1207,14 +1223,13 @@ textarea  */
 .imgenesDetalleProducto {
     width: 350px;
     height: 350px;
-    border-radius: 8px;
+    overflow: visible;
     border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 .imgContainer {
     overflow: hidden;
     width: 350px;
-    border-radius: 8px;
 }
 
 .sliderContainer {
@@ -1260,7 +1275,7 @@ textarea  */
 .priceDetailContainer {
     width: 100%;
     height: auto;
-    gap: 10px;
+    gap: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -1276,7 +1291,7 @@ textarea  */
     align-self: center;
 }
 
-.botonesAlquilarComprarContainer{
+.botonesAlquilarComprarContainer {
     width: 100%;
     margin: 10px;
     margin-top: 30px;
@@ -1293,17 +1308,91 @@ textarea  */
     height: 40px;
 }
 
-.botonDesplazarImgAntes{
+.botonDesplazarImgAntes {
     position: absolute;
     top: 185px;
     left: 5px;
 }
 
-.botonDesplazarImgDespues{
+.botonDesplazarImgDespues {
     position: absolute;
     top: 185px;
     right: 5px;
 }
+
+@media (max-width:500px) {
+
+    .detailsContainer {
+        margin: 15px;
+        align-items: center;
+    }
+
+    .imgenesDetalleProducto {
+        width: 270px;
+        height: 270px;
+    }
+
+    .imgVolverDetalleProductos {
+        right: -15px;
+        top: -20px;
+        width: 40px;
+        height: 40px;
+    }
+
+    .imgContainer {
+        width: 270px;
+    }
+
+    .sliderContainer {
+        height: 400px;
+        width: 320px;
+    }
+
+    .botonDesplazarImg {
+        width: 35px;
+        height: 35px;
+    }
+
+    .botonDesplazarImgAntes {
+        top: 145px;
+        left: 10px;
+    }
+
+    .botonDesplazarImgDespues {
+        top: 145px;
+        right: 10px;
+    }
+
+    .contenidoDetalleProducto {
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 300px;
+        gap: 30px;
+    }
+
+    .detailCalendarContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        width: 300px;
+        gap: 20px;
+    }
+
+    .calendarContainer {
+        width: 300px;
+        height: 390px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        border: none;
+        box-shadow: none;
+    }
+
+}
+
 /* ------------------ Footer ----------------------*/
 
 .footer {
@@ -1442,7 +1531,8 @@ h4 {
 /* para la pagina de contacto */
 .contact-container {
     text-align: center;
-    padding: 150px;
+    margin: auto;
+    margin: 50px 0px;
 }
 
 .contact-heading {
@@ -1495,14 +1585,15 @@ h4 {
 
     .footerP {
         font-size: 12px;
+
     }
 
     .footerContactoTel {
-        padding-left: 40px;
+        padding-left: 20px;
     }
 
     .footerContactoEmail {
-        padding-left: 40px;
+        padding-left: 10px;
     }
 
     .noticiasFooter {
@@ -1616,7 +1707,7 @@ h4 {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1;
+    z-index: 1000;
     /* Asegura que el fondo esté sobre otros elementos */
 }
 
@@ -1647,7 +1738,7 @@ h4 {
 }
 
 /* Estilos adicionales para el contenido dentro del cuadro emergente, como campos de inicio de sesión o registro */
-.popupSinup{
+.popupSinup {
     margin-top: 100px;
 }
 
@@ -1859,18 +1950,19 @@ h4 {
 
 /* Div 1 */
 
-.reservaProductoDiv1{
+.reservaProductoDiv1 {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-.reservaProductoImgP{
+.reservaProductoImgP {
     display: flex;
     flex-direction: row;
+    gap: 20px;
 }
 
-.reservaProductoImgP p{
+.reservaProductoImgP p {
     width: 300px;
     text-align: justify;
     margin: 0px 39px;
@@ -1882,7 +1974,7 @@ h4 {
     font-size: 30px;
 }
 
-.reservaProductoNombre{
+.reservaProductoNombre {
     margin-top: 20px;
     text-align: center;
     font-size: 20px;
@@ -1890,7 +1982,7 @@ h4 {
     margin-bottom: 20px;
 }
 
-.reservaProductoDivImg{
+.reservaProductoDivImg {
     margin: auto;
 }
 
@@ -1910,7 +2002,7 @@ h4 {
 
 /* Div 2 */
 
-.reservaProductoDiv2{
+.reservaProductoDiv2 {
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -1918,19 +2010,19 @@ h4 {
     margin-left: 30px;
 }
 
-.reservaProductoDiv2 p{
+.reservaProductoDiv2 p {
     display: flex;
     align-items: center;
 }
 
-.reservaProductoSpan{
+.reservaProductoSpan {
     width: 150px;
     display: inline-block;
 }
 
 /* Div Buton */
 
-.reservaProductoDivButon{
+.reservaProductoDivButon {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -1956,6 +2048,26 @@ h4 {
     padding: 10px 15px;
     width: 145px;
     margin: 10px;
+}
+
+.cargandoReserva {}
+
+@media (max-width : 800px) {
+    .reservaProducto {
+        width: 350px;
+    }
+
+    .reservaProductoImgP {
+        flex-direction: column;
+    }
+
+    .reservaProductoImgP p {
+        margin: 0px;
+    }
+
+    .reservaProductoDiv2 {
+        margin-left: 5px;
+    }
 }
 
 
@@ -2015,7 +2127,7 @@ h4 {
     color: #333;
 }
 
-.registerLinkHere{
+.registerLinkHere {
     color: #ffb61a;
     text-decoration: none;
     font-weight: bold;
